--- a/client/package.json
+++ b/client/package.json
@@ -2,10 +2,10 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "workspaces": [
-    "src/packages/**"
-  ],
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@mui/base": "^5.0.0-beta.5",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.6",
@@ -17,15 +17,17 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "cd home && npm start",
-    "build": "cd home && npm build",
-    "test": "cd home && npm test",
-    "eject": "cd home && npm eject"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
