--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.7.12",
     "yup": "^1.2.0"
   },
   "scripts": {
