--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "@mui/material": "^5.13.6",
     "@mui/styled-engine": "^5.13.2",
     "@mui/x-data-grid": "^6.9.0",
+    "@mui/x-date-pickers": "^6.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
