--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.2",
     "sweetalert2": "^11.7.12",
+    "timeago.js": "^4.0.2",
     "yup": "^1.2.0"
   },
   "scripts": {
