--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
+    "html2pdf.js": "^0.10.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-pdf": "^7.3.0",
     "react-router": "^6.14.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
