--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
-    "html2pdf.js": "^0.10.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +26,7 @@
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.7.2",
+    "sass": "^1.64.2",
     "sweetalert2": "^11.7.12",
     "timeago.js": "^4.0.2",
     "yup": "^1.2.0"
