--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "@infobip-api/sdk": "^0.2.0",
     "chai": "^4.3.7",
     "chai-http": "^4.4.0",
     "cors": "^2.8.5",
